# fanmap

./: .gdbinit  .gitmodules  Cargo.toml  LICENSE  auto fan speed.py  auto_fan_speed_linux.py  build.rs  openocd.cfg
.cargo/: config
bluepill_cpp/: Makefile  boards.stm32.mk  fanmap.cc  ld.stm32.basic  main_stm32.c  openocd.cfg
fanmap_blue_pill/: Cargo.toml  openocd.cfg
fanmap_blue_pill/src/: cdc_acm.rs  main.rs
pc/: Cargo.toml
pc/src/: main.rs
src/: main.rs
