[package]
name = "fanmap"
version = "0.1.0"
authors = ["Subrat Meher <smeher02.aoe3@gmail.com>"]

[dependencies]
stm32f103xx = "0.10.0"
stm32f103xx-hal = { path = "../stm32f103xx-hal" }
panic-abort = "0.3.1"
cortex-m = "0.5.7"
cortex-m-rt = "0.6.3"
panic-semihosting = "0.5.0"
nb = "0.1.1"

[profile.dev] # used during 'cargo build'
panic = "abort"
opt-level = "s"
lto = false
debug = true   # Controls whether the compiler passes `-g`
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 16 # Controls whether the compiler passes `-C codegen-units`