[package]
name = "fanmap"
version = "0.1.0"
authors = ["Subrat Meher <smeher02.aoe3@gmail.com>"]

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2.1"

[dependencies]
stm32f103xx-hal = { path = "../stm32f103xx-hal-fork" }
#panic-abort = "0.3.1"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-semihosting = "0.5.1"
nb = "0.1.1"
rtfm-core = "0.2.0"
cortex-m-rtfm = "0.3.4"
stm32f103xx-usb = { path = "../stm32f103xx-usb" }
usb-device = { path = "../usb-device" }
alloc-cortex-m = "0.3.5"

[profile.dev] # used during 'cargo build'
panic = "abort"
opt-level = "s"
lto = false
debug = true   # Controls whether the compiler passes `-g`
debug-assertions = true  # Controls whether debug assertions are enabled
codegen-units = 16 # Controls whether the compiler passes `-C codegen-units`
